force-app/main/default/objects/amazonconnect__AWS_PhoneCall__c/fields/amazonconnect__Contact__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PhoneCall</relationshipName>
    <type>Lookup</type>
</CustomField>