force-app/main/default/objects/amazonconnect__AWS_PhoneCall__c/fields/amazonconnect__Ended__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Ended__c</fullName>
    <label>Ended</label>
    <type>DateTime</type>
</CustomField>