force-app/main/default/objects/amazonconnect__AWS_PhoneCall__c/fields/amazonconnect__Recording__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Recording__c</fullName>
    <label>Recording</label>
    <type>Url</type>
</CustomField>