force-app/main/default/objects/amazonconnect__AWS_PhoneCall__c/fields/amazonconnect__Started__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Started__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>