force-app/main/default/objects/amazonconnect__AWS_PhoneCall__c/fields/amazonconnect__Status__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
                <default>true</default>
                <label>In-Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>